--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
-    "react-scripts": "5.0.1",
-    "sweetalert2": "^11.10.1",
+    "react-scripts": "^5.0.1",
+    "sweetalert2": "^11.6.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
