--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "d3": "^7.8.5",
     "formik": "^2.4.5",
     "history": "^5.3.0",
     "jwt-decode": "^3.1.2",
@@ -18,6 +19,7 @@
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "^5.0.1",
     "sweetalert2": "^11.6.13",
